information about a particular change.


****************************************************************************
*                       Source incompatible changes                        *
****************************************************************************

- QSslCertificate::subjectInfo() and QSslCertificate::issuerInfo() now
  return a QStringList instead of a QString


****************************************************************************
*                           General                                        *
****************************************************************************

General Improvements
--------------------

-

Third party components
----------------------

-


****************************************************************************
*                          Library                                         *
****************************************************************************

QtCore
------

QtGui
-----

QtNetwork
---------

QtOpenGL
--------

QtScript
--------


****************************************************************************
*                          Database Drivers                                *
****************************************************************************


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************

Qt for Linux/X11
----------------


Qt for Windows
--------------


Qt for Mac OS X
---------------


Qt for Embedded Linux
---------------------


Qt for Windows CE
-----------------


****************************************************************************
*                      Compiler Specific Changes                           *
****************************************************************************


****************************************************************************