@@ -798,9 +798,6 @@ QCoreGraphicsPaintEngine::updateClipPath(const QPainterPath &p, Qt::ClipOperatio
         } else if(op == Qt::IntersectClip) {
             d->current.clip = d->current.clip.intersected(clipRegion);
             d->setClip(&d->current.clip);
-        } else if(op == Qt::UniteClip) {
-            d->current.clip = d->current.clip.united(clipRegion);
-            d->setClip(&d->current.clip);
         }
     }
 }
@@ -822,8 +819,6 @@ QCoreGraphicsPaintEngine::updateClipRegion(const QRegion &clipRegion, Qt::ClipOp
             d->current.clip = d->current.clip.intersected(clipRegion);
         else if(op == Qt::ReplaceClip)
             d->current.clip = clipRegion;
-        else if(op == Qt::UniteClip)
-            d->current.clip = d->current.clip.united(clipRegion);
         d->setClip(&d->current.clip);
     }
 }
